--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "graphi"]
 	path = graphi
 	url = https://github.com/mxm07/graphi.git
+[submodule "valentines"]
+	path = valentines
+	url = https://github.com/mxm07/valentines.git
