--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "valentines"]
 	path = valentines
 	url = https://github.com/mxm07/valentines.git
+[submodule "vertical-twitch"]
+	path = vertical-twitch
+	url = https://github.com/mxm07/vertical-twitch.git
